начал делать 1 страницу

--- a/index.html
+++ b/index.html
@@ -8,6 +8,43 @@
   <title>Document</title>
 </head>
 <body>
-<h1>sdjfkhsdioufh</h1>
+  <div class='container'>
+    <div class="conteiner_row">
+      <div class='color-square color-square_dark-shade100'></div>
+          <p><b>Dark Shade 100%</b><br>
+          #1f2041</p>
+    </div>
+      <div class="conteiner_row">
+        <div class='color-square color-square_dark-shade75'></div>
+        <p><b>Dark Shade 75% </b><br>
+          #1f2041</p>
+        </div>
+        <div class="conteiner_row">
+          <div class='color-square color-square_dark-shade50'></div>
+          <p><b>Dark Shade 50% </b><br>
+            #1f2041</p>
+          </div>
+    <div class="conteiner_row">
+      <div class='color-square color-square_dark-shade25'></div>
+      <p><b>Dark Shade 25% </b><br>
+        #1f2041</p>
+    </div>
+      <div class="conteiner_row">
+        <div class='color-square color-square_dark-shade5'></div>
+        <p><b>Dark Shade 5% </b><br>
+          #1f2041</p>
+      </div>
+        <div class="conteiner_row">
+          <div class='color-square color-square-purple'></div>
+          <p><b>Purple</b><br>
+            #BC9CFF</p>
+        </div>
+        <div class="conteiner_row">
+         <div class='color-square color-square-green'></div>
+          <p><b>Green</b><br>
+            #6FCF97</p>
+        </div>
+    </div>
+  </div>
 </body>
 </html>
