подправил position relative

--- a/index.html
+++ b/index.html
@@ -5,44 +5,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
-  <title>Document</title>
+  <title>FCD</title>
 </head>
 <body>
   <div class='container'>
     <div class="conteiner_row">
       <div class='color-square color-square_dark-shade100'></div>
-          <p><b>Dark Shade 100%</b><br>
-          #1f2041</p>
+          <div class="color_title">Dark Shade 100%</div>
+          <div class="color_body">#1f2041</div>
     </div>
       <div class="conteiner_row">
         <div class='color-square color-square_dark-shade75'></div>
-        <p><b>Dark Shade 75% </b><br>
-          #1f2041</p>
+        <div class="color_title">Dark Shade 75% </div>
+          <div class="color_body">#1f2041</div>
         </div>
         <div class="conteiner_row">
           <div class='color-square color-square_dark-shade50'></div>
-          <p><b>Dark Shade 50% </b><br>
-            #1f2041</p>
+          <div class="color_title">Dark Shade 50% </div>
+            <div class="color_body">#1f2041</div>
           </div>
     <div class="conteiner_row">
       <div class='color-square color-square_dark-shade25'></div>
-      <p><b>Dark Shade 25% </b><br>
-        #1f2041</p>
+      <div class="color_title">Dark Shade 25% </div>
+        <div class="color_body">#1f2041</div>
     </div>
       <div class="conteiner_row">
         <div class='color-square color-square_dark-shade5'></div>
-        <p><b>Dark Shade 5% </b><br>
-          #1f2041</p>
+        <div class="color_title">Dark Shade 5% </div>
+          <div class="color_body">#1f2041</div>
       </div>
         <div class="conteiner_row">
           <div class='color-square color-square-purple'></div>
-          <p><b>Purple</b><br>
-            #BC9CFF</p>
+          <div class="color_title">Purple</div>
+            <div class="color_body">#BC9CFF</div>
         </div>
         <div class="conteiner_row">
          <div class='color-square color-square-green'></div>
-          <p><b>Green</b><br>
-            #6FCF97</p>
+          <div class="color_title">Green</div>
+            <div class="color_body">#6FCF97</div>
         </div>
     </div>
   </div>
