1 форма похожа на образец

--- a/cards.html
+++ b/cards.html
@@ -22,11 +22,12 @@
         <input type='date' name="date_out" id='date_out' placeholder="дд.мм.гггг"></label>
 
     </div>
-    <label for="guests">гости</label>
-    <select class="input_guests" name="guests">
+    <label for="guests" class="container-1_input-guests">гости<br>
+    <select  name="guests" id='guests'>
       <option selected disabled>Сколько гостей</option>
     </select>
-    <input type="submit" name="" value="подобрать номер    ->">
+    </label>
+    <input class='container-1_button' type="submit" name="submit_number" value="подобрать номер">
     </form>
   </div>
 
