--- a/cards.html
+++ b/cards.html
@@ -12,9 +12,9 @@
     <img src="src\Group.svg" alt="label">
   </div>
 <div class="container">
-  <form class="container-1" action="index.html" method="post">
-    <p>Найдем номера под ваши пожелания</p>
-    <div class="container-1_dates">
+  <form class="form form-1" action="index.html" method="post">
+    <p class="form-1_h1">Найдем номера под ваши пожелания</p>
+    <div class="form-1_dates">
       <label for="date_in">прибытие <br>
       <input type='date' name="date_in" id='date_in' placeholder="дд.мм.гггг"></label>
 
@@ -22,12 +22,33 @@
         <input type='date' name="date_out" id='date_out' placeholder="дд.мм.гггг"></label>
 
     </div>
-    <label for="guests" class="container-1_input-guests">гости<br>
+    <label for="guests" class="form-1_input-guests">гости<br>
     <select  name="guests" id='guests'>
       <option selected disabled>Сколько гостей</option>
     </select>
     </label>
-    <input class='container-1_button' type="submit" name="submit_number" value="подобрать номер">
+    <input class='form-1_button' type="submit" name="submit_number" value="подобрать номер">
+    <!--<img src="src\arrow_forward.png" alt="" class='arrow_button-1' >-->
+    </form>
+
+
+  <form class="form form-2" action="index.html" method="post">
+    <div class="form-2_number"> <span class="form-2_number_N">№</span> 888 <span class="form-2_lux"> люкс </span></div>
+    <div class="form-2_prise"> 9 990Р  <span class="form-2_prise_unb">в сутки</span></div>
+    <div class="form-1_dates">
+      <label for="date_in">прибытие <br>
+      <input type='date' name="date_in" id='date_in' placeholder="дд.мм.гггг"></label>
+
+      <label for="date_out">выезд<br>
+        <input type='date' name="date_out" id='date_out' placeholder="дд.мм.гггг"></label>
+      <label for="guests" class="form-1_input-guests">гости<br>
+       <select  name="guests" id='guests'>
+         <option selected disabled>Сколько гостей</option>
+       </select>
+      </label>
+    </div>
+    <input class='container-2_button' type="submit" name="submit_number" value="подобрать номер">
+    <img src="src\arrow_forward.png" alt="" class='arrow_button-1' >
     </form>
   </div>
 
