добавил скрипт для создания календаря

--- a/cards.html
+++ b/cards.html
@@ -8,8 +8,10 @@
   <title>Document</title>
 </head>
 <body>
-  <div class="lable_image">
-    <img src="src\Group.svg" alt="label">
+  <div class="header">
+      <div class="lable_image">
+      <img src="src\Group.svg" alt="label">
+    </div>
   </div>
 <div class="container">
   <form class="form form-1" action="index.html" method="post">
@@ -73,7 +75,12 @@
     <input class='form-2_button' type="submit" name="submit_number" value="забронировать">
     <img src="src\arrow_forward.png" alt="" class='arrow_button-1' >
     </form>
-  </div>
 
+  <form class="form form-3" action="index.html" method="post">
+    <table>
+    </table>
+  </form>
+ </div>
+ <script src="table.js" type="text/javascript" > </script>
 </body>
 </html>
