--- a/cards.html
+++ b/cards.html
@@ -77,8 +77,8 @@
     </form>
 
   <form class="form form-3" action="index.html" method="post">
-    <table>
-    </table>
+    <div class="calendar">
+      </div>
   </form>
  </div>
  <script src="table.js" type="text/javascript" > </script>
