Сделал внешне кнопку и добил выбор даты календаря.

--- a/cards.html
+++ b/cards.html
@@ -72,8 +72,11 @@
       <div class="form-2_itogo-prise">38081Р</div>
     </div>
 
-    <input class='form-2_button' type="submit" name="submit_number" value="забронировать">
-    <img src="src\arrow_forward.png" alt="" class='arrow_button-1' >
+    <div class='form-2_button' type="submit" name="submit_number" value="забронировать">
+     <div>
+      забронировать
+     </div>
+     <img src="src/arrow_forward.png" alt=""> </div>
     </form>
 
   <form class="form form-3" action="index.html" method="post">
