--- a/cards.html
+++ b/cards.html
@@ -72,7 +72,7 @@
       <div class="form-2_itogo-prise">38081Р</div>
     </div>
 
-    <div class='form-2_button' type="submit" name="submit_number" value="забронировать">
+    <div class='form-2_button'>
      <div>
       забронировать
      </div>
@@ -82,8 +82,20 @@
   <form class="form form-3" action="index.html" method="post">
     <div class="calendar">
       </div>
+
   </form>
  </div>
+
+ <div class="list hidden">
+   <div class="close">
+     X
+   </div>
+   <div class="handle">
+     AAAA
+   </div>
+ </div>
  <script src="table.js" type="text/javascript" > </script>
+
+
 </body>
 </html>
