сделал в файле тест календарь на все месяцы

--- a/cards.html
+++ b/cards.html
@@ -81,6 +81,14 @@
 
   <form class="form form-3" action="index.html" method="post">
     <div class="calendar">
+      <div class="calendar_header">
+        <div class="prev_mouth">
+        </div>
+        <div class="mouth_name">
+        </div>
+        <div class="next_mouth">
+       </div>
+      </div>
       </div>
 
   </form>
@@ -94,7 +102,7 @@
      AAAA
    </div>
  </div>
- <script src="table.js" type="text/javascript" > </script>
+ <script src="test.js" type="text/javascript" > </script>
 
 
 </body>
