начал делать слайдер, сделал внешний эффект

--- a/cards.html
+++ b/cards.html
@@ -79,8 +79,8 @@
      <img src="src/arrow_forward.png" alt=""> </div>
     </form>
 
-  <form class="form form-3" action="index.html" method="post">
-    <div class="calendar">
+  <form class="form " action="index.html" method="post">
+    <div class="calendar form-3">
       <div class="calendar_header">
         <div class="prev_mouth">
         </div>
@@ -90,9 +90,18 @@
        </div>
       </div>
       </div>
-
+  <form class="slider form" action="index.html" method="post">
+    <div class="scale">
+      --------------------------------------------------------------------------
+     <div class="point">
+     </div>
+   </div>
+</form>
   </form>
- </div>
+
+
+
+</div>
 
  <div class="list hidden">
    <div class="close">
