добавил в слайдер значение

--- a/cards.html
+++ b/cards.html
@@ -92,7 +92,9 @@
       </div>
   <form class="slider form" action="index.html" method="post">
     <div class="scale">
-      --------------------------------------------------------------------------
+      <div class="point_value hidden">
+
+      </div>
      <div class="point">
      </div>
    </div>
