--- a/cards.html
+++ b/cards.html
@@ -100,7 +100,9 @@
    </div>
 </form>
   </form>
+<div class="form">
 
+</div>
 
 
 </div>
@@ -114,6 +116,7 @@
    </div>
  </div>
  <script src="test.js" type="text/javascript" > </script>
+ <script src="slider.js" type="text/javascript" > </script>
 
 
 </body>
