--- a/cards.html
+++ b/cards.html
@@ -115,7 +115,7 @@
      AAAA
    </div>
  </div>
- <script src="test_calendar.js" type="text/javascript" > </script>
+ <script src="calendar_2.js" type="text/javascript" > </script>
  <script src="slider.js" type="text/javascript" > </script>
 
 
